syntax = "proto3";
package rumgap;

import "user.proto";
import "friend.proto";
import "manga.proto";
import "chapter.proto";
import "paginate.proto";

service User {
    rpc Register (UserRegisterRequest) returns (UserTokenReply);
    rpc Login (UserRequest) returns (UserTokenReply);
    rpc Get (Id) returns (UserFullReply);
    rpc Index (PaginateQuery) returns (UsersReply);
}

service Friend {
    rpc Follow (FriendRequest) returns (UserFullReply);
    rpc Unfollow (FriendRequest) returns (UserFullReply);
    rpc Following (PaginateQuery) returns (UsersReply);
    rpc Followers (PaginateQuery) returns (UsersReply);
}

service Manga {
    rpc Create (MangaRequest) returns (MangaReply);
    rpc CreateMany (MangasRequest) returns (stream MangaReply);
    rpc Get (Id) returns (MangaReply);
    rpc Index (PaginateSearchQuery) returns (MangasReply);
}

service Chapter {
    rpc Get (Id) returns (ImagesReply);
    rpc Index (PaginateChapterQuery) returns (ChaptersReply);
}

message Id {
    int32 id = 1;
}