syntax = "proto3";
package rumgap.v1;

import "rumgap/v1/paginate.proto";

message ChapterRequest {
    int32 manga_id = 1;
    int32 index = 2;
}

message ChapterOffset {
    int32 pixels = 1;
    int32 page = 2;
}

message ChapterReply {
    int32 id = 1;
    int32 manga_id = 2;
    string url = 3;
    string title = 4;
    float number = 5;
    int64 index = 6;
    int64 posted = 7;
    ChapterOffset offset = 8;
    int64 created_at = 9;
    int64 updated_at = 10;
}

message ChaptersReply {
    PaginateReply pagination = 1;
    repeated ChapterReply items = 2;
}

message ImagesReply {
    repeated string items = 1;
}

message PaginateChapterQuery {
    int32 id = 1;
    PaginateQuery paginate_query = 2;
}